@@ -146,7 +146,7 @@ public class FunctionsTest {
             when(j.getItemGroup()).thenReturn(j);
             createMockAncestors(req, createAncestor(view, "."), createAncestor(j, "../.."));
             TopLevelItem i = createMockItem(parent, "job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
@@ -212,7 +212,7 @@ public class FunctionsTest {
             when(parent.getItemGroup()).thenReturn(parent);
             createMockAncestors(req, createAncestor(j, "../../.."), createAncestor(parent, "../.."), createAncestor(view, "."));
             TopLevelItem i = createMockItem(parent, "job/i/", "parent/job/i/");
-            when(view.getItems()).thenReturn(Collections.singletonList(i));
+            when(view.getItems()).thenReturn(List.of(i));
             String result = Functions.getRelativeLinkTo(i);
             assertEquals("job/i/", result);
         }
